--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                         />
                     </h1>
                     <form
-                        action="https://getform.io/f/broonvpa"
+                        action="https://getform.io/f/blllqjpb"
                         method="POST"
                     >
                         <label for="email" class="sr-only"
